--- a/infra/k8s/event-bus-depl.yml
+++ b/infra/k8s/event-bus-depl.yml
@@ -1,34 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: posts-depl
+  name: event-bus-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: posts
+      app: event-bus
   template:
     metadata:
       labels:
-        app: posts
+        app: event-bus
     spec:
       containers:
-      - name: posts
-        image: codenameninja/posts
+      - name: event-bus
+        image: codenameninja/event-bus
+
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
-  name: posts-clusterip-srv
+  name: event-bus-srv
   labels:
-    app: posts-clusterip-srv
+    app: event-bus-srv
 spec:
   type: ClusterIP #Optional
   selector:
-    app: posts
+    app: event-bus
   ports:  # List of ports to be exposed
-    - name: posts 
+    - name: event-bus 
       protocol: TCP
-      port: 4000
-      targetPort: 4000
+      port: 4005
+      targetPort: 4005
